fix: link and z-index

--- a/blocks/header/__square-pic/header__square-pic.css
+++ b/blocks/header/__square-pic/header__square-pic.css
@@ -5,5 +5,5 @@
   top: 64px;
   right: 0;
   background-color: #2F80ED;
-  z-index: 0;
+  z-index: -1;
 }
