--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -7,4 +7,5 @@
   display: flex;
   align-items: center;
   overflow: hidden;
+  z-index: 1;
 }
