--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -6,4 +6,5 @@
     width: 877px;
     height: 877px;
     background-size: contain;
+    z-index: -1;
 }
