--- a/blocks/link/link.css
+++ b/blocks/link/link.css
@@ -1,4 +1,8 @@
+.link {
+  opacity: 1;
+  transition: opacity 1s ease-out;
+}
+
 .link:hover {
   opacity: 0.5;
-  transition: opacity 1s ease-out;
 }
